test/errors/typecheck/bad_access.ty
foo := func(n: number) -> number {
	return n.bar
}